<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_15sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/center">

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/masjid_logo"
            android:tag="label" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.custom_widgets.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rounded_background_corner"
            android:hint="@string/emailaddress"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:tag="email"
            android:textColor="@color/grey2"
            android:textColorHint="@color/grey1"
            android:textSize="@dimen/_10ssp"
            app:customFontEditText="Poppins-Regular.ttf" />

        <android.support.constraint.ConstraintLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.custom_widgets.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_corner"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/pwd_edit_txt"
                android:paddingLeft="@dimen/_20sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="@dimen/_6sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:tag="password"
                android:textColor="@color/grey2"
                android:textColorHint="@color/grey1"
                android:textSize="@dimen/_10ssp"
                app:customFontEditText="Poppins-Regular.ttf" />

            <ImageView
                android:id="@+id/img11"
                android:src="@drawable/ic_eye_open"
                android:padding="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
        </android.support.constraint.ConstraintLayout>

        <com.custom_widgets.CustomTextView
            android:id="@+id/text_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_15sdp"
            android:tag="forgot_password"
            android:text="@string/forgotpass"
            android:textColor="@color/deep_sky_blue"
            android:textSize="@dimen/_10ssp"
            app:customFont="Poppins-Bold.ttf" />

        <com.custom_widgets.CustomButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/selector_blue_shadow_button"
            android:gravity="center"
            android:inputType="textFilter"
            android:paddingLeft="@dimen/_35sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_35sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:stateListAnimator="@null"
            android:tag="signin"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            android:textSize="@dimen/_12ssp"
            app:customFontButton="Poppins-Bold.ttf"
            tools:ignore="UnusedAttribute" />

        <com.custom_widgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:gravity="center"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:tag="label"
            android:text="@string/bysigningup"
            android:textColor="@color/grey2"
            android:textSize="@dimen/_10ssp"
            app:customFont="Poppins-Bold.ttf" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/lin_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <com.custom_widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="label"
                android:text="@string/registeras"
                android:textColor="@color/home_text"
                android:textSize="@dimen/_12ssp"
                app:customFont="Poppins-SemiBold.ttf" />

            <com.custom_widgets.CustomTextView
                android:id="@+id/resgister_masjid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:gravity="center"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:tag="register_masjid"
                android:text="Hear"
                android:textColor="@color/deep_sky_blue"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible"
                app:customFont="Poppins-SemiBold.ttf" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <com.custom_widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="label"
                android:text="@string/notamasjid"
                android:textColor="@color/home_text"
                android:textSize="@dimen/_12ssp"
                app:customFont="Poppins-SemiBold.ttf" />

            <com.custom_widgets.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:gravity="center"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:tag="skip"
                android:text="@string/skip"
                android:textColor="@color/deep_sky_blue"
                android:textSize="@dimen/_12ssp"
                app:customFont="Poppins-SemiBold.ttf" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>