<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llContactUs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        android:visibility="gone">

        <com.custom_widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:tag="label"
            android:text="@string/contact_us_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            app:customFont="Poppins-Bold.ttf" />

        <View
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:background="@android:color/black"
            android:tag="label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/user"
                    android:tag="label" />

                <com.custom_widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:padding="@dimen/_2sdp"
                    android:tag="label"
                    android:text="@string/your_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    app:customFont="Poppins-Light.ttf" />
            </LinearLayout>

            <com.custom_widgets.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_et_bg"
                android:inputType="textImeMultiLine|text"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_8sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:tag="name"
                android:textCursorDrawable="@drawable/drawable_cursor_black"
                android:textSize="@dimen/_12ssp"
                app:customFontEditText="Poppins-Light.ttf" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/mail"
                    android:tag="label" />

                <com.custom_widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:padding="@dimen/_2sdp"
                    android:tag="label"
                    android:text="@string/your_email"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    app:customFont="Poppins-Light.ttf" />
            </LinearLayout>

            <com.custom_widgets.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_et_bg"
                android:inputType="textWebEmailAddress"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_8sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:tag="email"
                android:textCursorDrawable="@drawable/drawable_cursor_black"
                android:textSize="@dimen/_12ssp"
                app:customFontEditText="Poppins-Light.ttf" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/msg"
                    android:tag="label" />

                <com.custom_widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:padding="@dimen/_2sdp"
                    android:tag="label"
                    android:text="@string/your_message"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    app:customFont="Poppins-Light.ttf" />

            </LinearLayout>

            <com.custom_widgets.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_et_bg"
                android:gravity="left|top"
                android:lines="6"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_8sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:tag="message"
                android:textCursorDrawable="@drawable/drawable_cursor_black"
                android:textSize="@dimen/_12ssp"
                app:customFontEditText="Poppins-Light.ttf"
                tools:ignore="RtlHardcoded" />

            <com.custom_widgets.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/selector_blue_shadow_button"
                android:gravity="center"
                android:inputType="textFilter"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:stateListAnimator="@null"
                android:tag="send"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="@dimen/_12ssp"
                app:customFontButton="Poppins-SemiBold.ttf"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llThankYou"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:visibility="visible">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_above="@id/tvThankYou"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_email" />

        <com.custom_widgets.CustomTextView
            android:id="@+id/tvThankYou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="THANK YOU!"
            android:textColor="#322826"
            android:textSize="@dimen/_25ssp"
            app:customFont="Poppins-Bold.ttf" />

        <com.custom_widgets.CustomTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvThankYou"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:gravity="center"
            android:text="Your message has been sent, one of our staff will be in touch with you shortly. In the meantime, make sure you follow us on social media!"
            android:textColor="@color/grey2"
            android:textSize="@dimen/_15ssp"
            app:customFont="Poppins-Light.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMessage"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_facebook" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_twitter" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_instagram" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_youtube" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>